[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["tazzan <tazzanyt@gmail.com>"]
description = "yeah"
name = "repl_python3_TF2-Blender-Server-bot"
version = "0.1.0"
[tool.poetry.dependencies]
Flask = "^2.0.2"
discord = "^1.7.3"
python = "^3.8"
replit = "^3.2.4"
[tool.poetry.dev-dependencies]
