[tool.poetry]
name = "repl_python3_TF2-Blender-Server-bot"
version = "1.4"
description = "yeah"
authors = ["tazzan <tazzanyt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
replit = "^3.2.4"
discord = "^1.7.3"
Flask = "^2.0.2"
pycord = "^0.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
